--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,8 @@ rvm:
 - 2.0.0
 addons:
   sauce_connect: true
+sauce:
+  build: <%= ENV['TRAVIS_BUILD_NUMBER'].to_s || 'Ran locally' %>
 env:
   global:
   - USE_SAUCE=true
