--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,7 @@ addons:
   sauce_connect: true
 sauce:
   build: <%= ENV['TRAVIS_BUILD_NUMBER'].to_s || 'Ran locally' %>
+  tunnel_identifier: <%= ENV['TRAVIS_BUILD_NUMBER'].to_s %>
 env:
   global:
   - USE_SAUCE=true
