--- a/spec/javascripts/support/jasmine_selenium_runner.yml
+++ b/spec/javascripts/support/jasmine_selenium_runner.yml
@@ -9,6 +9,6 @@ sauce:
   tags:
     - <%= ENV['TRAVIS_RUBY_VERSION'] || RUBY_VERSION %>
     - CI
-  tunnel_identifier: <%= ENV['TRAVIS_JOB_NUMBER'] ? "#{ENV['TRAVIS_JOB_NUMBER']}" : nil %>
+  tunnel_identifier: "Travis #<%= ENV['TRAVIS_JOB_NUMBER'] ? "#{ENV['TRAVIS_JOB_NUMBER']}" : nil %>"
   os: <%= ENV['SAUCE_OS'] %>
   browser_version: <%= ENV['SAUCE_BROWSER_VERSION'] %>
