Updating sauce connect installer

--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,8 @@ rvm:
 - 2.0.0
 env:
   global:
+  - SAUCE_TMP_DIR="$(mktemp -d -t sc.XXXX)
+  - SAUCE_CONNECT_BIN="${SAUCE_TMP_DIR}/sauce-connect/bin/sc"
   - USE_SAUCE=true
   - secure: "bRimjiy4bFC/3g+nvHwEcbXNwEORB3/OBH0oAd96gqaDuCnnd59SRDRVoiMszaJa/eoMdW9DF3suOVHC2rqpKiOmrr+qpUtYf7vEmfx7lZ6NMv94eBowJZu5sMZuNQetuidCOhQI/IgCNZqhwQCNh0Qb7Ajb0p5hGJz5aQpZ6gA="
   - secure: "WzcLPpcNn7dAZOxpHOrcAOxF1DYSiDSAE0a4v9Ud15OPtb880jKfsLM7lZiqJI1oHC/LDx5N56G/43k9bHGJgyLiu0lJhCdvNiJHCRTz3AW8Wxao2IN5cVZ8St4jKliNEbrpxNMCBi2pz0UaHXHwTTTy5L2ugDGyiXZgFGaH0T4="
